# belinda.ai-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  cron.Dockerfile  cronjob  docker-compose.yml  processed.txt  pyproject.toml  run_parse.sh
belinda_app/: .env  app.py  middleware.py  routes.py  settings.py  utils.py
belinda_app/catboost_predict/: evaluate.py  pipeline_preprocess.py  preprocessing.py
belinda_app/db/: __init__.py  database.py
belinda_app/linreg_predict/: evaluate.py  lr_3.joblib
belinda_app/models/: __init__.py  artist.py  artist_session.py  artist_track.py  curator.py  curator_playlist.py  curator_session.py  curator_social_link.py  curators.py  deals.py  feedback.py  musician.py  musician_session.py  musician_track.py  playlists.py  sessions.py  tracks.py  users.py
belinda_app/schemas/: __init__.py  artist.py  artist_track.py  curator.py  curator_session.py  deal.py  musician.py  musician_session.py  musician_track.py  responses.py
belinda_app/services/: __init__.py  artist_authorization_service.py  artist_track_service.py  auth_service.py  authentication_service.py  create_access_token_service.py  curator_authorization_service.py  deal_service.py  musician_authorization_service.py  musician_track_service.py  parse_spotify_playlist_service.py  parse_spotify_tracks_service.py  parse_submithub_service.py  update_data_in_db_service.py
scripts/: parse_spotify_artists.py  parse_spotify_artists_recommendations_file.py  parse_spotify_performers.py  parse_spotify_playlists.py  parse_spotify_recommendation.py  parse_spotify_tracks.py  parse_submithub.py  refactor_curator_for_database.py
