[tool.poetry]
name = "belinda-ai"
version = "0.1.0"
description = "Helping musicians discover the best potential partner for expansion of the audience using AI"
authors = ["Matveeva.S.P"]
license = "MIT"
readme = "README.md"
packages = [{include = "belinda"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
psutil = "^5.9.5"
ruff = "^0.0.277"
black = "^23.3.0"
itsdangerous = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
