[tool.poetry]
name = "belinda-ai"
version = "0.1.0"
description = "Helping musicians discover the best potential partner for expansion of the audience using AI"
authors = ["Matveeva.S.P"]
license = "MIT"
readme = "README.md"
packages = [{include = "belinda"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
psutil = "^5.9.5"
ruff = "^0.0.277"
black = "^23.3.0"
itsdangerous = "^2.1.2"
python-dotenv = "^1.0.0"
sqlalchemy = "1.4.35"
sqlmodel = "0.0.6"
asyncpg = "^0.28.0"
python-multipart = "^0.0.6"
gunicorn = "^21.1.0"
jwt = "^1.3.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
